# rusty_bash

./: Cargo.toml
.github/workflows/: build.yml
src/core/: builtins.rs
