[package]
name = "sush"
version = "0.9.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = { version = "0.29.0", features = ["fs", "process", "signal", "term", "user", "time", "hostname", "resource"]}
termion = "4.0.3"
unicode-width = "0.1.11"
signal-hook = "0.3.17"
rev_lines = "0.3.0"
faccess = "0.2.4"
regex = "1.11.1"
rand = "0.8"
rand_chacha = "0.3"
time = "0.3"

[profile.release]
opt-level = 3                     # 最大优化
lto = true                        # 启用链接时优化
codegen-units = 1                 # 全局优化
panic = "abort"                   # 使用 abort 而不是 unwind
debug = false                      # 禁用调试信息
overflow-checks = false           # 禁用溢出检查
strip = "debuginfo"               # 去除调试信息
inline-threshold = 1024           # 增加内联阈值
target-cpu = "cortex-x3,cortex-a710,cortex-a715,cortex-a510" # 针对所有核心进行优化
target-feature = "+neon,+vfp4,+crypto" # 启用 NEON、VFP4 和加密指令集
